test/fixtures/diagnostics/type-checker/negative/enum-alias-invalid/input.tysh
namespace Samples.TypeChecker.EnumAliasInvalid

enum Color {
  Red = 1,
  Missing = Blue,
  Forward = Later,
  Self = Self,
  Later = 2
}
